--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-data-table-component": "^7.6.2",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
+    "react-file-viewer": "^1.2.1",
     "react-icons": "^5.0.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.0",
@@ -40,6 +41,7 @@
     "react-toastify": "^10.0.4",
     "reactstrap": "^9.2.2",
     "redux": "^5.0.1",
+    "styled-components": "^6.1.13",
     "sweetalert2": "^11.10.5"
   },
   "devDependencies": {
