--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-bootstrap": "^2.10.4",
     "react-bootstrap-icons": "^1.11.4",
     "react-data-table-component": "^7.6.2",
+    "react-doc-viewer": "^0.1.14",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-file-viewer": "^1.2.1",
