Se ajusta busqueda básica
Se ajusta busqueda básica para incluir fechas

--- a/package.json
+++ b/package.json
@@ -26,11 +26,13 @@
     "@types/reactstrap": "^8.7.2",
     "bootstrap": "^5.3.3",
     "bootstrap-switch-button-react": "^1.2.0",
+    "date-fns": "^4.1.0",
     "notistack": "^3.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.4",
     "react-bootstrap-icons": "^1.11.4",
     "react-data-table-component": "^7.6.2",
+    "react-datepicker": "^7.4.0",
     "react-doc-viewer": "^0.1.14",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
