--- a/package.json
+++ b/package.json
@@ -40,12 +40,14 @@
     "react-icons": "^5.0.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.0",
+    "react-spinners": "^0.14.1",
     "react-table": "^7.8.0",
     "react-toastify": "^10.0.4",
     "reactstrap": "^9.2.2",
     "redux": "^5.0.1",
     "styled-components": "^6.1.13",
-    "sweetalert2": "^11.10.5"
+    "sweetalert2": "^11.10.5",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/bootstrap": "^5.2.10",
