--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "bootstrap": "^5.3.3",
     "bootstrap-switch-button-react": "^1.2.0",
     "date-fns": "^4.1.0",
+    "jszip": "^3.10.1",
     "notistack": "^3.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.4",
