--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "redux": "^5.0.1",
     "styled-components": "^6.1.13",
     "sweetalert2": "^11.10.5",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "xlsx-js-style": "^1.2.0"
   },
   "devDependencies": {
     "@types/bootstrap": "^5.2.10",
