--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,9 @@ dist-ssr
 *.sln
 *.sw?
 /.vs/AgrosenseWeb/FileContentIndex
+/.history
+.env.development
+.env.development
+/.vite
+.env.development
+.env.development
